--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroui/modal": "^2.2.16",
+    "@nextui-org/modal": "^2.2.7",
+    "@nextui-org/react": "^2.6.11",
+    "framer-motion": "^12.9.4",
+    "link": "^2.1.1",
+    "next": "15.3.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.3.1"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
