--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroui/modal": "^2.2.16",
     "@nextui-org/modal": "^2.2.7",
     "@nextui-org/react": "^2.6.11",
+    "axios": "^1.9.0",
     "framer-motion": "^12.9.4",
     "link": "^2.1.1",
     "next": "15.3.1",
