--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroui/modal": "^2.2.16",
+    "@monaco-editor/react": "^4.7.0",
     "@nextui-org/modal": "^2.2.7",
     "@nextui-org/react": "^2.6.11",
     "axios": "^1.9.0",
