--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.9.0",
     "framer-motion": "^12.9.4",
     "link": "^2.1.1",
+    "lucide-react": "^0.511.0",
     "mongoose": "^8.15.1",
     "next": "15.3.1",
     "react": "^19.0.0",
