--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
     "@monaco-editor/react": "^4.7.0",
     "@nextui-org/modal": "^2.2.7",
     "@nextui-org/react": "^2.6.11",
+    "@tensorflow-models/blazeface": "^0.1.0",
+    "@tensorflow-models/coco-ssd": "^2.2.3",
+    "@tensorflow/tfjs": "^4.22.0",
     "axios": "^1.9.0",
+    "encoding": "^0.1.13",
+    "face-api.js": "^0.22.2",
     "framer-motion": "^12.9.4",
     "link": "^2.1.1",
     "lucide-react": "^0.511.0",
